<resources>
    <string name="app_name">Sunshine!</string>

    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail">Details</string>

    <string name="location_setting">Location settings</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">94043</string>

    <string name="system_of_units">System of units</string>
    <string name="pref_units_label">Temperature Units</string>
    <string name="pref_units_key">units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="pref_unit_default">@string/pref_units_imperial</string>
    <string name="pref_unit_dialog_title">Temperature Units</string>
</resources>
